# travelbrag

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Travelbrag.ipynb  cities.csv  justfile  pyproject.toml  requirements.txt  schema.sql  travelogue.csv  travelogue.geojson
.claude/: settings.local.json
site/: index.html
tests/: test_app.py  test_city_search.py  test_config.py  test_database.py  test_date_parser.py  test_geojson_export.py  test_geonames.py  test_main_window.py  test_map_view.py  test_repository.py  test_repository_cities.py  test_statistics.py
travelbrag/: __init__.py  __main__.py  app.py  config.py  database.py  date_parser.py  geojson_export.py  geonames.py  models.py  repository.py  statistics.py
travelbrag/gui/: __init__.py  city_search.py  city_trips_dialog.py  main_window.py  map_view.py  multi_select_dialog.py  participant_selection_dialog.py  people_view.py  person_detail.py  selection_dialog.py  statistics_view.py  text_input_dialog.py  trip_create_dialog.py  trip_detail.py  trip_edit.py  trips_overview.py
