[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travelbrag"
version = "0.1.0"
description = "GUI application to record trips taken by family members"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toga>=0.4.0",
    "httpx>=0.27.0",
    "pycountry>=24.6.1",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "toga-dummy>=0.4.0",
    "pillow>=10.0.0",
]

[project.scripts]
travelbrag = "travelbrag.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
